@@ -102,3 +102,4 @@
 20231024 ./watchlist/hia-parse-cifs.sh updated.
 20231024 ./watchlist/hia-parse-dns.sh updated.
 20231024 ./watchlist/hia-parse-ftp.sh updated.
+20231024 ./watchlist/hia-parse-http.sh updated.
